// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty Array default test 1`] = `
Object {
  "columns": Array [],
  "name": "",
  "rows": Array [],
}
`;

exports[`Empty Object default test 1`] = `
Object {
  "columns": Array [],
  "name": "",
  "rows": Array [],
}
`;

exports[`Nested object without array default test 1`] = `
Object {
  "columns": Array [
    Object {
      "selector": "foo",
      "text": "foo",
      "type": "string",
    },
    Object {
      "selector": "bar",
      "text": "bar",
      "type": "string",
    },
    Object {
      "selector": "baz",
      "text": "baz",
      "type": "string",
    },
    Object {
      "selector": "gaz",
      "text": "gaz",
      "type": "string",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "foo1",
      "bar1",
      "baz1",
      "gaz1",
    ],
  ],
}
`;

exports[`Number Array default test 1`] = `
Object {
  "columns": Array [
    Object {
      "selector": "value",
      "text": "value",
      "type": "number",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      1,
    ],
    Array [
      2,
    ],
    Array [
      3,
    ],
  ],
}
`;

exports[`Simple Object default test 1`] = `
Object {
  "columns": Array [
    Object {
      "selector": "firstName",
      "text": "firstName",
      "type": "string",
    },
    Object {
      "selector": "lastName",
      "text": "lastName",
      "type": "string",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "foo",
      "bar",
    ],
  ],
}
`;

exports[`Simple Object with number array and string array default test 1`] = `
Object {
  "columns": Array [
    Object {
      "selector": "firstName",
      "text": "firstName",
      "type": "string",
    },
    Object {
      "selector": "lastName",
      "text": "lastName",
      "type": "string",
    },
    Object {
      "selector": "users",
      "text": "users",
      "type": "string",
    },
    Object {
      "selector": "users1",
      "text": "users1",
      "type": "string",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "foo",
      "bar",
      "[\\"foo\\",\\"bar\\"]",
      "[1,2,3]",
    ],
  ],
}
`;

exports[`Simple Object with number array default test 1`] = `
Object {
  "columns": Array [
    Object {
      "selector": "firstName",
      "text": "firstName",
      "type": "string",
    },
    Object {
      "selector": "lastName",
      "text": "lastName",
      "type": "string",
    },
    Object {
      "selector": "users",
      "text": "users",
      "type": "string",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "foo",
      "bar",
      "[1,2,3]",
    ],
  ],
}
`;

exports[`Simple Object with number array, string array, object array default test 1`] = `
Object {
  "columns": Array [
    Object {
      "selector": "koo",
      "text": "koo",
      "type": "string",
    },
    Object {
      "selector": "moo",
      "text": "moo",
      "type": "string",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "foo1",
      "bar1",
    ],
    Array [
      "foo1",
      "bar1",
    ],
    Array [
      "foo1",
      "bar1",
    ],
    Array [
      "foo1",
      "bar1",
    ],
  ],
}
`;

exports[`Simple Object with string array default test 1`] = `
Object {
  "columns": Array [
    Object {
      "selector": "firstName",
      "text": "firstName",
      "type": "string",
    },
    Object {
      "selector": "lastName",
      "text": "lastName",
      "type": "string",
    },
    Object {
      "selector": "users",
      "text": "users",
      "type": "string",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "foo",
      "bar",
      "[\\"one\\",\\"two\\"]",
    ],
  ],
}
`;

exports[`String Array default test 1`] = `
Object {
  "columns": Array [
    Object {
      "selector": "value",
      "text": "value",
      "type": "string",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "foo",
    ],
    Array [
      "bar",
    ],
    Array [
      "baz",
    ],
  ],
}
`;

exports[`String Array with duplicates default test 1`] = `
Object {
  "columns": Array [
    Object {
      "selector": "value",
      "text": "value",
      "type": "string",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "foo",
    ],
    Array [
      "bar",
    ],
    Array [
      "foo",
    ],
  ],
}
`;
